[project]
name = "black-belt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "per.lundhammar@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fiona>=1.10.1",
    "geopandas>=1.1.2",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.5",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pyogrio>=0.12.1",
    "pyproj>=3.7.2",
    "requests>=2.32.5",
    "rtree>=1.4.1",
    "shapely>=2.1.2",
    "seaborn"
]

[project.scripts]
black-belt = "black_belt:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
